<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Eduardo Barrenechea
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Ticker</string>
    <string name="add">Add</string>
    <string name="event_name">Event name</string>
    <string name="ok">OK</string>
    <string name="name_ascending">Name A-Z</string>
    <string name="name_descending">Name Z-A</string>
    <string name="time_descending">Newest first</string>
    <string name="time_ascending">Oldest first</string>
    <string name="sort">Sort</string>
    <string name="note">Note</string>
    <string name="name">Name</string>
    <string name="tap_to_add_a_note">Tap to add a note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="no_history_found">No history found!</string>
    <string name="no_events">No events yet!</string>
    <string name="nothing_found">No matches for \'%s\'</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="changes_not_saved">Changes not saved</string>
    <string name="changes_saved">Changes saved</string>
    <string name="event_created">Event created</string>
    <string name="event_not_created">Event not created</string>
    <string name="create_event">Create Event</string>
    <string name="search_events">Search events</string>
    <string name="empty_search">Please enter a search term</string>
</resources>
