<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Eduardo Barrenechea
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_events"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="101"
        android:title="Refresh"
        app:showAsAction="never"
        tools:ignore="HardcodedText"/>

    <item
        android:orderInCategory="100"
        android:title="@string/sort"
        android:icon="@drawable/ic_action_sort"
        app:showAsAction="ifRoom">

        <menu android:checkableBehavior="single">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_start_asc"
                    android:title="@string/time_ascending"
                    android:checked="true"/>
                <item
                    android:id="@+id/sort_start_desc"
                    android:title="@string/time_descending"/>
            </group>
        </menu>
    </item>
</menu>
