<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  * Copyright (C) 2014 Eduardo Barrenechea
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minWidth="@dimen/dialog_width"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/create_event"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#aaa"/>

    <Space
        android:layout_height="@dimen/padding_medium"
        android:layout_width="1dp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:hint="@string/event_name"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete|textAutoCorrect">

        <requestFocus/>
    </EditText>

    <Space
        android:layout_height="@dimen/padding_medium"
        android:layout_width="1dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/button_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>