<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Eduardo Barrenechea
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_name"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_small"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Event name"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:alpha="0"
        android:hint="@string/name"
        android:maxLines="1"
        android:padding="@dimen/padding_medium"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible"
        tools:text="Event name"/>

    <TextView
        android:id="@+id/text_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_note"
        android:layout_below="@+id/text_name"
        android:gravity="top"
        android:hint="@string/tap_to_add_a_note"
        android:maxLines="3"
        android:minLines="3"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_small"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="This is a note!!!"/>

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name"
        android:alpha="0"
        android:gravity="top"
        android:hint="@string/note"
        android:maxLines="3"
        android:minLines="3"
        android:padding="@dimen/padding_medium"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        tools:text="This is a note!!!"/>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_note"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_small"
        android:textAppearance="?android:attr/textAppearance"
        tools:text="Sept. 17, 2014"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_time"
        android:layout_marginTop="@dimen/padding_medium">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_history_found"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible"/>

    </FrameLayout>

</RelativeLayout>